IG-2142 [Nuclio] Status tab: update contents while deploying (fixed build log)

--- a/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -40,7 +40,7 @@
                     <span class="monitoring-block-title">Build log</span>
                     <div class="ncl-monitoring-build-logs collapsed-block-content-wrapper"
                          data-uib-collapse="$ctrl.rowIsCollapsed.buildLog">
-                        <ncl-deploy-log data-log-entires="$ctrl.version.status.logs"></ncl-deploy-log>
+                        <ncl-deploy-log data-log-entires="$ctrl.versionStatus.logs"></ncl-deploy-log>
                     </div>
                 </div>
             </div>
