--- a/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -40,11 +40,11 @@
                     <span class="monitoring-block-title">Build log</span>
                     <div class="ncl-monitoring-build-logs collapsed-block-content-wrapper"
                          data-uib-collapse="$ctrl.rowIsCollapsed.buildLog">
-                        <ncl-deploy-log data-log-entires="$ctrl.version.status.logs"></ncl-deploy-log>
+                        <ncl-deploy-log data-log-entires="$ctrl.versionStatus.logs"></ncl-deploy-log>
                     </div>
                 </div>
             </div>
-            <div class="row" data-ng-if="$ctrl.version.status.state === 'error'">
+            <div class="row" data-ng-if="$ctrl.checkIsErrorState()">
                 <div class="monitoring-block ncl-monitoring-error-logger">
                     <span class="icon-collapsed general-content"
                           data-ng-class="$ctrl.rowIsCollapsed.errorLog ? 'igz-icon-right' : 'igz-icon-down'"
@@ -56,7 +56,9 @@
                              data-ng-scrollbars
                              data-ng-scrollbars-config="$ctrl.scrollConfig">
                             <div class="log-entry">
-                                <span class="log-entry-error"> {{$ctrl.version.status.message}}</span>
+                                <span class="log-entry-error">
+                                    {{$ctrl.versionStatus.message}}
+                                </span>
                             </div>
                         </div>
                     </div>
