IG-2156 [Nuclio] Add "Duplicate" action to functions

--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -126,7 +126,8 @@
                                                                  data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)"
                                                                  data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})"
                                                                  data-on-update-function="$ctrl.onUpdateFunction({function: function, projectID: projectID})"
-                                                                 data-get-function="$ctrl.getFunction({metadata: metadata, projectID: projectID})">
+                                                                 data-get-function="$ctrl.getFunction({metadata: metadata, projectID: projectID})"
+                                                                 data-refresh-functions-list="$ctrl.refreshFunctions()">
                                     </ncl-function-collapsing-row>
                                 </div>
                             </div>
