--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -127,6 +127,8 @@
                                                                  data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})"
                                                                  data-on-update-function="$ctrl.onUpdateFunction({function: function, projectID: projectID})"
                                                                  data-get-function="$ctrl.getFunction({metadata: metadata, projectID: projectID})"
+                                                                 data-get-functions="$ctrl.getFunctions({id: id})"
+                                                                 data-create-function="$ctrl.createFunction({version: version, projectID: projectID})"
                                                                  data-refresh-functions-list="$ctrl.refreshFunctions()">
                                     </ncl-function-collapsing-row>
                                 </div>
