IG-2174 [Nuclio] Import multiple-projects YAML not working

--- a/src/nuclio/projects/projects-welcome-page/projects-welcome-page.tpl.html
+++ b/src/nuclio/projects/projects-welcome-page/projects-welcome-page.tpl.html
@@ -15,7 +15,7 @@
         <div class="ncl-new-entity-button"
              ngf-select="$ctrl.importProject($file)"
              accept=".yml, .yaml">
-            Import project
+            Import project(s)
         </div>
     </div>
 </div>
