Align GPU Limit with Memory & CPU Limit

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -100,6 +100,7 @@
 
             <div class="igz-row form-row range-inputs-row">
                 <div class="igz-col-10 row-title">GPU</div>
+                <div class="igz-col-40 input-wrapper"></div>
                 <div class="igz-col-40 input-wrapper">
                     <div class="input-title">Limit</div>
                     <div class="row-input gpu-number-input">
